# sdk

./: .gitignore  README.md
huggingplace-python-sdk/: INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
huggingplace-python-sdk/examples/: basic_usage.py  tracing_basic.py  tracing_llm.py  tracing_multi_step.py
huggingplace-python-sdk/huggingplace_sdk/: __init__.py  cli.py  errors.py  huggingplace.py  session.py  validation.py
huggingplace-python-sdk/huggingplace_sdk/trace/: __init__.py  config.py  sender.py  trace_llm.py  trace_multi_step.py  trace_step.py  utils.py
huggingplace-python-sdk/tests/: __init__.py  test_huggingplace.py
huggingplace-sdk/: .eslintrc.js  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SUMMARY.md  package.json
huggingplace-sdk/examples/: basic-usage.js  tracing-basic.js  tracing-llm.js  tracing-multistep.js
huggingplace-sdk/src/: config.js  errors.js  huggingplace.js  index.js  session.js  validation.js
huggingplace-sdk/src/trace/: index.js  sender.js  traceLLM.js  traceMultiStep.js  traceStep.js  tracerSetup.js  utils.js
