[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingplace-sdk"
version = "1.0.1"
description = "Official SDK for HuggingPlace - Log and trace LLM interactions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HuggingPlace Team", email = "team@huggingplace.com"}
]
maintainers = [
    {name = "HuggingPlace Team", email = "team@huggingplace.com"}
]
keywords = [
    "huggingplace",
    "llm",
    "logging",
    "tracing",
    "prompt-engineering",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/huggingplace/huggingplace-sdk-python"
Documentation = "https://github.com/huggingplace/huggingplace-sdk-python#readme"
Repository = "https://github.com/huggingplace/huggingplace-sdk-python"
Issues = "https://github.com/huggingplace/huggingplace-sdk-python/issues"

[project.scripts]
huggingplace = "huggingplace_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["huggingplace_sdk*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 